# stor

./: .coveragerc  .flake8  .gitignore  .travis.yml  AUTHORS  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  cli.html  contributing.html  dx.html  exceptions.html  extensions.html  genindex.html  index.html  installation.html  integration_test.sh  main_interface.html  objects.inv  posix.html  publish_docs.sh  py-modindex.html  pyproject.toml  release_notes.html  requirements-dev.txt  requirements-setup.txt  requirements.txt  roadmap.html  run_all.sh  s3.html  search.html  searchindex.js  settings.html  setup.cfg  setup.py  swift.html  testing.html  (+3 more)
stor/: MANIFEST.in  README.rst  __init__.py  base.py  cli.py  default.cfg  default.env  dx.py  exceptions.py  obs.py  posix.py  requirements-dev.txt  requirements-test.txt  requirements.txt  s3.py  settings.py  setup.cfg  stor-completion.bash  swift.py  test.py  utils.py  windows.py
stor/experimental/: s3.py
stor/extensions/: swiftstack.py
stor/stor/: __init__.py  base.py  cli.py  default.env  obs.py  posix.py  settings.py  utils.py
stor/stor/extensions/: swiftstack.py
stor/stor/tests/: test_cli.py  test_integration.py  test_posix.py  test_utils.py  test_windows.py
stor/tests/: integration.py  shared.py  shared_obs.py  test_cli.py  test_dx.py  test_dx_path_compat.py  test_extensions_swiftstack.py  test_integration.py  test_integration_cross_obs.py  test_integration_dx.py  test_integration_filemodes.py  test_integration_posix.py  test_integration_s3.py  test_integration_swift.py  test_posix.py  test_posix_path_compat.py  test_s3.py  test_s3_path_compat.py  test_settings.py  test_swift.py  test_swift_path_compat.py  test_utils.py  test_windows.py
stor/tests/cassettes_py2/TestCanonicalProject/: test_canonical_path.yaml  test_canonical_path_on_dir.yaml
stor/tests/cassettes_py2/TestCanonicalResource/: test_no_resource.yaml  test_virtual_on_virtual.yaml
stor/tests/cassettes_py2/TestCopy/: test_clone_move_project_fail.yaml  test_dx_canonical_to_dx_file.yaml  test_dx_dir_to_posix_error.yaml  test_dx_to_dx_diff_project_exist_file.yaml  test_dx_to_dx_same_project_exist_dest.yaml  test_dx_to_posix_file.yaml  test_dx_to_posix_folder.yaml  test_dx_to_same_dx_pass.yaml  test_empty_path.yaml  test_posix_to_dx_fail.yaml  test_posix_to_dx_file.yaml  test_posix_to_dx_file_folder_no_ext.yaml  test_posix_to_dx_folder.yaml  test_posix_to_existing_dx.yaml  test_posix_to_existing_dx_fail.yaml
stor/tests/cassettes_py2/TestCopyTree/: test_dx_dir_to_dx_dir_w_slash.yaml  test_dx_dir_to_dx_existing_dir.yaml  test_dx_dir_to_dx_root_same_project.yaml  test_dx_root_to_dx_dir_w_slash.yaml  test_dx_root_to_dx_root.yaml  test_dx_to_existing_dx_dest_fail.yaml  test_dx_to_other_obs.yaml  test_dx_to_same_dx_pass.yaml  test_empty_path.yaml  test_move_diff_project_fail.yaml  test_move_root_within_project_fail.yaml  test_posix_dir_to_dx.yaml  test_posix_file_to_dx.yaml
stor/tests/cassettes_py2/TestExists/: test_false_canonical_path.yaml  test_false_canonical_project.yaml  test_false_folder.yaml  test_false_mixed_path.yaml  test_true_canonical_path.yaml  test_true_canonical_project.yaml  test_true_empty_dir.yaml  test_true_mixed_path.yaml
stor/tests/cassettes_py2/TestGetSize/: test_file.yaml  test_folder.yaml  test_project.yaml
stor/tests/cassettes_py2/TestGlob/: test_cond_no_met.yaml  test_glob_cond_met.yaml  test_prefix_pattern.yaml  test_suffix_pattern.yaml  test_valid_pattern_wo_wildcard.yaml
stor/tests/cassettes_py2/TestList/: test_list_absent_folder.yaml  test_list_empty_folder.yaml  test_list_folder_w_files.yaml  test_list_iter_project.yaml  test_list_limit.yaml  test_list_starts_with.yaml  test_list_w_category.yaml
stor/tests/cassettes_py2/TestListDir/: test_listdir_absent_folder.yaml  test_listdir_empty_folder.yaml  test_listdir_file.yaml  test_listdir_on_canonical_resource.yaml
stor/tests/cassettes_py2/TestLoginAuth/: test_login_auth.yaml  test_mocking_login_auth_works.yaml
stor/tests/cassettes_py2/TestOpen/: test_append_mode_fail.yaml  test_read_dir_fail.yaml  test_read_fail_on_closed_buffer.yaml  test_read_on_open_buffer.yaml  test_read_on_open_dx_file.yaml  test_write_multiple_flush_multiple_upload.yaml  test_write_multiple_wo_context_manager.yaml  test_write_read_over_files.yaml  test_write_to_project_fail.yaml  test_write_w_settings_big_timeout.yaml  test_write_w_settings_no_timeout.yaml
stor/tests/cassettes_py2/TestRemove/: test_fail_remove_nonexistent_file.yaml  test_fail_rmtree_file.yaml  test_rmtree_project.yaml
stor/tests/cassettes_py2/TestRename/: test_rename_file_pass.yaml  test_rename_folder_fail.yaml
stor/tests/cassettes_py2/TestStat/: test_stat_canonical_project.yaml  test_stat_canonical_resource.yaml  test_stat_file.yaml  test_stat_folder.yaml  test_stat_project_error.yaml  test_stat_virtual_project.yaml
stor/tests/cassettes_py2/TestTempUrl/: test_fail_on_project.yaml  test_on_file.yaml  test_on_file_named_timed.yaml
stor/tests/file_data/: test.cfg  utf8_file_with_unicode.txt
stor_dx/: MANIFEST.in  dx.py  requirements.txt  setup.cfg  setup.py  test.py
stor_dx/stor_dx/: __init__.py  dx.py  utils.py
stor_dx/stor_dx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  pbr.json  requires.txt  top_level.txt
stor_dx/stor_dx/tests/: test_cli_dx.py  test_dx.py  test_integration_dx.py
stor_dx/tests/: test_cli_dx.py  test_dx.py  test_dx_path_compat.py
stor_s3/: MANIFEST.in  s3.py  setup.cfg  setup.py  test.py  utils.py
stor_s3/stor_s3/: __init__.py  s3.py  test.py  utils.py
stor_s3/stor_s3.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
stor_s3/stor_s3/tests/: test_cli_s3.py  test_integration_s3.py  test_posix_s3.py  test_s3.py  test_s3_path_compat.py  test_utils_s3.py  test_windows_s3.py
stor_s3/tests/: test_cli_s3.py  test_posix_s3.py  test_utils_s3.py
stor_swift_shunt_dx/: setup.cfg
stor_swift_shunt_dx/stor_swift_shunt_dx/: __init__.py
stor_swift_shunt_dx/stor_swift_shunt_dx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  pbr.json  top_level.txt
(+469 files in other folders)
