[metadata]
name = counsyl-storage-utils
author = Counsyl Inc.
author-email = root@counsyl.com
summary = Utils for I/O at Counsyl
description-file = README.md
home-page = https://github.counsyl.com/dev/counsyl-storage-utils
requires-python = >=2.7,<3
license = Copyright Counsyl, Inc.
classifier =
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Framework :: Django
    Development Status :: 4 - Beta
    Operating System :: OS Independent

[coverage:run]
branch = True
source = storage_utils
omit = storage_utils/tests/test_posix_path_compat.py,storage_utils/tests/test_integration_swift.py,storage_utils/tests/test_integration_s3.py,storage_utils/tests/test_integration.py storage_utils/third_party/*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    raise NotImplementedError
fail_under = 100
show_missing = 1

[files]
packages = storage_utils

[entry_points]
console_scripts =
    stor = storage_utils.cli:main

[flake8]
max-complexity=10
max-line-length=99
exclude = storage_utils/third_party/*

[pbr]
skip_authors = true
skip_changelog = true

[global]
test_suite = nose.collector
