[metadata]
name = stor
author = Counsyl Inc.
author-email = opensource@counsyl.com
summary = Cross-compatible API for accessing Posix and OBS storage systems
description-file = README.rst
home-page = https://github.com/counsyl/stor
requires-python = >=2.7
license = MIT
classifier =
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent

[coverage:run]
branch = True
source = stor
omit = stor/tests/test_posix_path_compat.py,stor/tests/test_integration_swift.py,stor/tests/test_integration_s3.py,stor/tests/test_integration.py,stor/third_party/backoff.py,stor/tests/test_integration_dx.py

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    raise NotImplementedError
fail_under = 100
show_missing = 1

[files]
packages = stor
scripts = stor/stor-completion.bash

[entry_points]
console_scripts =
    stor = stor.cli:main

[flake8]
max-complexity=10
max-line-length=99
exclude = stor/third_party/*

[pbr]
skip_authors = true
skip_changelog = true

[bdist_wheel]
universal = 1
