[metadata]
name = stor_s3
author = Counsyl Inc.
author-email = opensource@counsyl.com
summary = Add-on package to stor for accessing S3 storage systems
home-page = https://github.com/counsyl/stor
requires-python = >=2.7
license = MIT
classifier =
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent

[coverage:run]
branch = True
source = stor_s3, ../stor/stor
omit = stor_s3/tests/test_integration_s3.py

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    raise NotImplementedError
fail_under = 100
show_missing = 1

[files]
packages = stor_s3

[entry_points]
stor.providers =
    s3 = stor_s3:find_cls_for_path

[flake8]
max-complexity=10
max-line-length=99

[pbr]
skip_authors = true
skip_changelog = true

[bdist_wheel]
universal = 1
