[metadata]
name = stor_swift_shunt_dx
author = Counsyl Inc.
author-email = opensource@counsyl.com
summary = Add-on package to redirect swift paths to dx
home-page = https://github.com/counsyl/stor
requires-python = >=2.7
license = MIT
classifier =
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent

[files]
packages = stor_swift_shunt_dx

[entry_points]
stor.providers =
    swift = stor_swift_shunt_dx:find_cls_for_path
console_scripts =
    stor = stor.cli:main

[flake8]
max-complexity=10
max-line-length=99

[pbr]
skip_authors = true
skip_changelog = true

[bdist_wheel]
universal = 1
